# todo-app-fastapi

./: .gitignore  CLAUDE.md  Dockerfile  Taskfile.yaml  compose.yml  cspell.json
app/backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  ruff.toml
app/backend/alembic/: __init__.py  env.py
app/backend/alembic/versions/: 2025_10_27_create_credentials_table.py  6ed2df8ef336_create_users_table.py  a1b2c3d4e5f6_create_todos_table.py
app/backend/src/: dependencies.py  environment.py  main.py
app/backend/src/domain/auth/: __init__.py  credential.py  password_hash.py  repository.py
app/backend/src/domain/todo/: id.py  repository.py  todo.py
app/backend/src/domain/user/: email_address.py  id.py  name.py  repository.py  role.py  user.py
app/backend/src/infrastructure/auth/: __init__.py  jwt_service.py  password_service.py
app/backend/src/infrastructure/config/: database.py
app/backend/src/infrastructure/mapper/: __init__.py  todo_mapper.py  user_mapper.py
app/backend/src/infrastructure/models/: credential_model.py  todo_model.py  user_model.py
app/backend/src/log/: __init__.py  logger.py
app/backend/src/shared/errors/: codes.py  errors.py
app/backend/src/usecase/auth/: __init__.py  login_usecase.py  register_usecase.py
app/backend/src/usecase/todo/: search_todos_usecase.py  toggle_todo_usecase.py
app/backend/tests/: conftest.py
app/backend/tests/contract/: conftest.py  test_api_contracts.py
app/backend/tests/unit/: conftest.py
app/backend/tests/unit/log/: __init__.py  (+1 more)
(+120 files in other folders)
